# app-developer-experience

./: .actrc  .gitignore  AGENTS.md  Dockerfile.dev  Makefile  README.md  app-developer-experience.code-workspace  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  nx.json  package-lock.json  package.json
.claude/: CLAUDE.md  settings.json
.claude/commands/: debug-pipeline.md
.github/: copilot-instructions.md  pull_request_template.md
.github/debug-reports/: PIPELINE_DEBUG_REPORT.md  PIPELINE_DEBUG_REPORT_20260516.md  PIPELINE_DEBUG_REPORT_20260603.md
.github/instructions/: backend.instructions.md  branch_strategy.instructions.md  makefile.instructions.md  web_development.instructions.md
.github/workflows/: changelog.yml  ci-azure-backend.yml  ci-azure-webapp.yml  ci_cm_components.yml  ci_conference_manager.yml  deploy_cm_infrastructure.yml  pull_request.yml  pull_request_backend.yml  pull_request_cli.yml  pull_request_cm_components.yml  pull_request_cm_infrastructure.yml  pull_request_conference_manager.yml  pull_request_conference_manager_infra.yml  pull_request_webapp.yml  release.yml  tf-aws-check.yml  tf-aws-plan.yml  validate-commits.yml  validate_commits.yml
agents/: .gitignore
backend/: README.md
backend/ms-fastapi-rest-tpl/: .dockerignore  .flake8  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  project.json  pyproject.toml
backend/ms-fastapi-rest-tpl/docker-compose/: docker-compose.db.yml  docker-compose.local.yml
backend/ms-fastapi-rest-tpl/src/: application.py  main.py
backend/ms-fastapi-rest-tpl/src/api/: healthcheck.py  routes.py
backend/ms-fastapi-rest-tpl/src/core/: constants.py  environment.py
backend/ms-fastapi-rest-tpl/src/infrastructure/: settings.py
backend/ms-fastapi-rest-tpl/tests/: conftest.py
backend/ms-fastapi-rest-tpl/tests/api/: test_healthcheck.py
backend/ms-nestjs-gql-tpl/: .gitignore  .markdownlint.rb  Makefile  package-lock.json  project.json  sonar-project.properties
backend/ms-nestjs-rest-tpl/: .dockerignore  .env.public  CHANGELOG.md  Dockerfile  Makefile  README.md  commitlint.config.ts  lint-staged.config.ts  package-lock.json  package.json  project.json
cli/: .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml
cli/appcli/: constants.py  core.py  main.py
cli/src/: main.py
cli/tests/core/: test_repo.py
cloud/: README.md
conference-manager/: .env.public  .gitignore  Makefile  README.md
conference-manager/backend/: .commitlintrc.json  .env.public  .travis.yml  Dockerfile  jest.config.js  package.json  tsconfig.json
conference-manager/docker-compose/: docker-compose.db.yml  docker-compose.local.admin.yml  docker-compose.local.api.yml  docker-compose.local.yml  (+5 more)
devops/: ci-aws-backend.yml  ci-aws-webapp.yml  pull_request_webapp.yml
docker-compose/: docker-compose.local.yml
docs/: Agents_Copilot.md  CodeReview.md  DevOps.md  Security.md  Testing.md  Tooling.md  monorepo.drawio
ms-fastapi-rest-tpl/: .dockerignore  .gitignore  Makefile  Pipfile
ms-nest-gql-template/: .env.example  .yamllint  Makefile  package.json
ms-nestjs-gql-template/: .env.public  Dockerfile  eslint.config.mjs  package.json
ms-nestjs-gql-tpl/: .env.public  .mdlrc  README.md  package-lock.json  package.json
ms-nestjs-rest-tpl/: .gitignore  jest.config.js  package-lock.json  package.json  sonar-project.properties
src/: app.module.ts
(+851 files in other folders)
